update in headers

--- a/diagnostics/ocean3d/notebooks/ocean_drifts.ipynb
+++ b/diagnostics/ocean3d/notebooks/ocean_drifts.ipynb
@@ -53,16 +53,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Here we read one of the reference NextGEMS Cycle 3 simulations\n",
+    "Here we read one of the reference NextGEMS Cycle 3 simulations\n",
+    "And we extract the Potential Temperature and Practical Salinity fields, resampling in yearly means (as these are more adequate to identify drifts as they are not contaminated by seasonal cycle signals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Reader' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m reader \u001b[39m=\u001b[39m Reader(model\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFESOM\u001b[39m\u001b[39m'\u001b[39m, exp\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtco2559-ng5-cycle3\u001b[39m\u001b[39m'\u001b[39m, source\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mlra-r100-monthly\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m yearly_data \u001b[39m=\u001b[39m reader\u001b[39m.\u001b[39mretrieve()[[\u001b[39m\"\u001b[39m\u001b[39mocpt\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mso\u001b[39m\u001b[39m\"\u001b[39m]]\u001b[39m.\u001b[39mresample(time\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mYS\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mmean()\n\u001b[1;32m      4\u001b[0m yearly_data\u001b[39m=\u001b[39myearly_data\u001b[39m.\u001b[39mrename({\u001b[39m\"\u001b[39m\u001b[39mnz1\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mlev\u001b[39m\u001b[39m\"\u001b[39m})\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Reader' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "reader = Reader(model='FESOM', exp='tco2559-ng5-cycle3', source=\"lra-r100-monthly\")\n",
     "\n",
-    "# And we extract the Potential Temperature and Practical Salinity fields, resampling in yearly means\n",
-    "# Yearly means are more adequate to identify drifts as they are not contaminated by seasonal cycle signals\n",
     "yearly_data = reader.retrieve()[[\"ocpt\",\"so\"]].resample(time=\"YS\").mean()\n",
     "yearly_data=yearly_data.rename({\"nz1\":\"lev\"})"
    ]
@@ -140,11 +157,17 @@
     }
    ],
    "source": [
-    "#output_dir = \"~/AQUA_output\" # To be costumized by the user\n",
-    "# output_dir = os.path.expanduser(\"~/AQUA_output\") # It can also be costumized by the user\n",
+    "output_dir = os.path.expanduser(\"~/AQUA_output\") # It can also be costumized by the user\n",
     "# output_dir = \"/work/bb1153/b382397/AQUA_output\"\n",
-    "output_dir = \"/home/b/b382075/work/de340_7.1.2/ocean_3d\"  #Deliverable Dir\n",
+    "#output_dir = \"/home/b/b382075/work/de340_7.1.2/ocean_3d\"  #Deliverable Dir\n",
     "print(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This first example produces the hovmoller directly for the Full Values of Global Ocean temperature and salinity averages. Full Values are useful to visualise how the ocean is stratified but less so to identify drifts"
    ]
   },
   {
@@ -180,9 +203,14 @@
     }
    ],
    "source": [
-    "# This first example produces the hovmoller directly for the Full Values of Global Ocean temperature and salinity averages\n",
-    "#  Full Values are useful to visualise how the ocean is stratified but less so to identify drifts\n",
     "hovmoller_lev_time_plot(yearly_data, region= \"Global Ocean\", anomaly= False, standardise= False, output= True, output_dir= output_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This second example produces the associated anomalies referred to the temporal mean. Anomalies are useful to visualise how ocean anomalies (and drifts) manifest near the surface, but less so in the deep ocean"
    ]
   },
   {
@@ -218,13 +246,18 @@
     }
    ],
    "source": [
-    "# This second example produces the associated anomalies referred to the temporal mean\n",
-    "#  Anomalies are useful to visualise how ocean anomalies (and drifts) manifest near the surface, but less so in the deep ocean\n",
-    "#  Anomalies referred to the full periood \n",
+    "\n",
     "hovmoller_lev_time_plot(data = yearly_data, region= \"Global Ocean\",\n",
     "                        anomaly= True, standardise = False,                        \n",
     "                        anomaly_ref = 'Tmean', output= True,\n",
     "                        output_dir= output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The third example produces the associated standardised anomalies (referred to the temporal mean). Standardised Anomalies are useful to visualise drifts at all ocean levels, but do not allow to compare their magnitude. Referring anomalies wrt the temporal mean allows to better visualise opposing trends and the inflection point"
    ]
   },
   {
@@ -260,13 +293,17 @@
     }
    ],
    "source": [
-    "# The third example produces the associated standardised anomalies (referred to the temporal mean)\n",
-    "#  Standardised Anomalies are useful to visualise drifts at all ocean levels, but does not allow to compare their magnitude\n",
-    "#  Referring anomalies wrt the temporal mean allows to better visualise opposing trends and the inflection point\n",
     "hovmoller_lev_time_plot(data = yearly_data, region= \"Global Ocean\",\n",
     "                        anomaly= True, standardise= True,                                                \n",
     "                        anomaly_ref = 'tmean',\n",
     "                        output= True, output_dir= output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fourth example produces global standardised anomalies but referred to the first temporal step. Standardised Anomalies are useful to visualise drifts at all ocean levels, but does not allow to compare their magnitude. Referring the anomalies wrt to the first year allows to see which layers get colder and which ones warmer in time\n"
    ]
   },
   {
@@ -302,14 +339,17 @@
     }
    ],
    "source": [
-    "# The fourth example produces global standardised anomalies but referred to the first temporal step\n",
-    "#  Standardised Anomalies are useful to visualise drifts at all ocean levels, but does not allow to compare their magnitude\n",
-    "#  Referring the anomalies wrt to the first year allows to see which layers get colder and which ones warmer in time\n",
-    "\n",
     "hovmoller_lev_time_plot(data = yearly_data, region= \"Global Ocean\",\n",
     "                        anomaly= True, standardise= True,                        \n",
     "                        anomaly_ref = 't0',\n",
     "                        output= True, output_dir= output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This example is for the function that plots timeseries of Globally averaged yearly full values of ocpt and so at the default depth levels"
    ]
   },
   {
@@ -345,9 +385,14 @@
     }
    ],
    "source": [
-    "# This example is for the function that plots timeseries of Globally averaged yearly full values of ocpt and so \n",
-    "#  at the default depth levels\n",
     "time_series_multilevs(yearly_data,'Global Ocean', anomaly= False, standardise= False, anomaly_ref=\"FullValue\",customise_level=False, levels=list,output = True,  output_dir = output_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This example is for the function that plots timeseries of Globally averaged yearly anomalies (wrt t0) of ocpt and so at the default depth levels"
    ]
   },
   {
@@ -383,9 +428,14 @@
     }
    ],
    "source": [
-    "# This example is for the function that plots timeseries of Globally averaged yearly anomalies (wrt t0) of ocpt and so \n",
-    "# at the default depth levels\n",
     "time_series_multilevs(yearly_data,'Global Ocean',anomaly= True, standardise= False, anomaly_ref=\"t0\",customise_level=False, levels=list,output = True,  output_dir= output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This example is for the function that plots timeseries of Globally averaged standardised yearly anomalies (wrt t0) of ocpt and so for a customised selection of depth levels"
    ]
   },
   {
@@ -421,10 +471,14 @@
     }
    ],
    "source": [
-    "# This example is for the function that plots timeseries of Globally averaged standardised yearly anomalies (wrt t0) \n",
-    "# of ocpt and so for a customised selection of depth levels\n",
-    "\n",
     "time_series_multilevs(yearly_data,'Global Ocean', anomaly= True, standardise= True, anomaly_ref=\"t0\",customise_level=True, levels=[50, 150, 750, 900, 1600, 3000, 4500], output = True,  output_dir= output_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example  for the function that plots maps of temporal trends (computed for all years in the dataset) and plots them for the whole Global Ocean for the default list of vertical levels\n"
    ]
   },
   {
@@ -459,9 +513,14 @@
     }
    ],
    "source": [
-    "# This is an example  for the function that plots maps of temporal trends (computed for all years in the dataset) \n",
-    "#  and plots them for the whole Global Ocean for the default list of vertical levels\n",
     "multilevel_t_s_trend_plot(yearly_data,'Global Ocean', customise_level=False, levels=None,output= True, output_dir =  output_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is another example for the function that plots maps of temporal trends (computed for all years in the dataset) cropped now to the Atlantic Ocean and shown for a customised list of levels"
    ]
   },
   {
@@ -496,9 +555,14 @@
     }
    ],
    "source": [
-    "# This is another example for the function that plots maps of temporal trends (computed for all years in the dataset) \n",
-    "#  cropped now to the Atlantic Ocean and shown for a customised list of levels\n",
     "multilevel_t_s_trend_plot(yearly_data,'indian Ocean', customise_level=True, levels=[50, 150, 750, 1500, 3000, 4500], output= True, output_dir =  output_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example for the function that plots zonally averaged linear trends of T, S as a function of depth and latitude in this case for the Indian Ocean"
    ]
   },
   {
@@ -527,9 +591,14 @@
     }
    ],
    "source": [
-    "# This is an example for the function that plots zonally averaged linear trends of T, S as a function of depth and latitude\n",
-    "#  in this case for the Indian Ocean\n",
     "zonal_mean_trend_plot(yearly_data, region= \"Indian Ocean\", output= True, output_dir= output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example for the function that plots zonally averaged linear trends of T, S as a function of depth and latitude in this case for the Global Ocean"
    ]
   },
   {
@@ -558,24 +627,15 @@
     }
    ],
    "source": [
-    "# This is an example for the function that plots zonally averaged linear trends of T, S as a function of depth and latitude\n",
-    "#  in this case for the Global Ocean\n",
     "zonal_mean_trend_plot(yearly_data, region= \"Global Ocean\", output= True, output_dir= output_dir)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aqua",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "aqua"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -587,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
