The function which calculates the mean and stores it in storage is added. The mean-plotting function is updated.

--- a/diagnostics/tropical_rainfall/notebooks/histogram_calculations_of_highres.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/histogram_calculations_of_highres.ipynb
@@ -126,6 +126,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
+      "6088024    256   1     R          dask-worker          22:15      2023-07-20T17:23:16  (null)               compute              233G                \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slurm.squeue()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -165,11 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = Tropical_Rainfall(trop_lat=15,  num_of_bins = 1000, first_edge = 0, width_of_bin = 1, loglevel='debug')"
+    "diag = Tropical_Rainfall(trop_lat=15,  num_of_bins = 1000, first_edge = 0, width_of_bin = 1, loglevel='debug')\n",
+    "# or width_of_bin = 1 - 10**(-6)"
    ]
   },
   {
@@ -251,7 +280,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### MSWEP "
+    "### MSWEP no fixer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag = Tropical_Rainfall(trop_lat=15,  num_of_bins = 1000, first_edge = 0, width_of_bin = 1, loglevel='debug')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader        = Reader(model=\"MSWEP\", exp=\"past\", source=\"3hourly\")\n",
+    "mswep_no_fixer = reader.retrieve(fix=False)\n",
+    "mswep_no_fixer = mswep_no_fixer.rename({'precipitation': 'tprate'})\n",
+    "path_to_netcdf = \"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/mswep_no_fixer/\"\n",
+    "\n",
+    "for year in range(1979, 2020):\n",
+    "    for x in range(1, 12, 2):\n",
+    "        \n",
+    "        mswep  = mswep_retrieved.sel(time=slice(str(year)+'-'+str(x), str(year)+'-'+str(x+1)))\n",
+    "        mswep   = mswep['tprate'][:]*8\n",
+    "        mswep.attrs['units'] = \"mm/day\"\n",
+    "        diag.histogram(mswep, path_to_histogram=path_to_netcdf, \n",
+    "                     name_of_file=\"trop_rainfall_mswep_past_3hourly_r010\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MSWEP with fixer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag = Tropical_Rainfall(trop_lat=15,  num_of_bins = 1000, first_edge = 0, width_of_bin = 1 - 10**(-6), loglevel='debug')"
    ]
   },
   {
@@ -262,8 +338,8 @@
    "source": [
     "reader              = Reader(model=\"MSWEP\", exp=\"past\", source=\"3hourly\")\n",
     "mswep_retrieved     = reader.retrieve()\n",
-    "path_to_netcdf      =\"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/mswep_no_fix/\"\n",
     "\n",
+    "path_to_netcdf      =\"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/mswep_new_fixer/\"\n",
     "\n",
     "for year in range(1979, 2020):\n",
     "    for x in range(1, 12, 2):\n",
@@ -338,21 +414,55 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MSWEP check"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-19 02:43:06 :: Trop. Rainfall :: INFO     -> Histograms are merged.\n"
+      "2023-07-20 17:27:02 :: Trop. Rainfall :: INFO     -> Histograms are merged.\n"
      ]
     }
    ],
    "source": [
     "path_to_mswep='/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/mswep_no_fix/'\n",
-    "hist_mswep = diag.merge_list_of_histograms(path_to_histograms = path_to_mswep,  all = True)"
+    "hist_mswep_no_fix = diag.merge_list_of_histograms(path_to_histograms = path_to_mswep,  all = True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fixer with new binning: width_of_bin = 1 - 10**(-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-20 17:38:26 :: Trop. Rainfall :: INFO     -> Histograms are merged.\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_to_mswep='/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/mswep_new_bins/'\n",
+    "hist_mswep_new_bins = diag.merge_list_of_histograms(path_to_histograms = path_to_mswep,  all = True)"
    ]
   },
   {
