Minor updates of test and class

--- a/diagnostics/tropical_rainfall/notebooks/histogram_calculations_of_highres.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/histogram_calculations_of_highres.ipynb
@@ -106,28 +106,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Please change the path to the NetCDF files and the PDF files to your own path\n",
     "\n",
     "path_to_netcdf = \"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/\"\n",
+    "path_to_mean = \"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/mean/\"\n",
     "path_to_pdf    = \"/work/bb1153/b382267/tropical_rainfall_cicle3/PDF/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-21 17:18:15 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-07-21 17:18:15 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-07-21 17:18:15 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
+      "2023-07-21 17:18:27 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
+      "\n",
+      "#SBATCH -J dask-worker\n",
+      "#SBATCH -p compute\n",
+      "#SBATCH -A bb1153\n",
+      "#SBATCH -n 1\n",
+      "#SBATCH --cpus-per-task=16\n",
+      "#SBATCH --mem=233G\n",
+      "#SBATCH -t 02:30:00\n",
+      "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
+      "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
+      "\n",
+      "/work/bb1153/b382267/mamba_dir/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.7:43791 --nthreads 4 --nworkers 4 --memory-limit 58.21GiB --name dummy-name --nanny --death-timeout 60\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "slurm.job(cores=16, memory=\"250 GB\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +160,7 @@
      "output_type": "stream",
      "text": [
       "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
-      "6088024    256   1     R          dask-worker          22:15      2023-07-20T17:23:16  (null)               compute              233G                \n"
+      "6115009    256   1     R          dask-worker          13:38      2023-07-21T17:20:41  (null)               compute              233G                \n"
      ]
     },
     {
@@ -144,7 +169,7 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,6 +242,58 @@
     "        ifs_tco1279_orca025 = reader.regrid(ifs_tco1279_orca025)\n",
     "        diag.histogram(ifs_tco1279_orca025, path_to_histogram=path_to_netcdf, threshold = 30, \n",
     "                     name_of_file=\"ifs_tco1279_orca025_3hourly_2D_1h_native_r010_3h\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-21 17:36:44 :: Trop. Rainfall :: DEBUG    -> Seasonal mean calculated.\n",
+      "2023-07-21 17:36:45 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/mean/ already exists\n",
+      "2023-07-21 17:38:04 :: Trop. Rainfall :: INFO     -> Histogram is saved in the storage.\n",
+      "2023-07-21 17:38:04 :: Trop. Rainfall :: DEBUG    -> Dataset or DataArray is saved into storage.\n",
+      "2023-07-21 17:38:05 :: Trop. Rainfall :: DEBUG    -> Seasonal mean calculated.\n",
+      "2023-07-21 17:38:05 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/mean/ already exists\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[0;32m/work/bb1153/b382267/AQUA/diagnostics/tropical_rainfall/notebooks/../../tropical_rainfall/tropical_rainfall_class.py:701\u001b[0m, in \u001b[0;36mTropical_Rainfall.dataset_to_netcdf\u001b[0;34m(self, dataset, path_to_netcdf, name_of_file)\u001b[0m\n\u001b[1;32m    699\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    700\u001b[0m     name_of_file \u001b[39m=\u001b[39m name_of_file \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m, re\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m, time_band)[\u001b[39m0\u001b[39m])[\n\u001b[0;32m--> 701\u001b[0m         \u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m, re\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m, \u001b[39;49m\u001b[39m\"\u001b[39;49m, time_band)[\u001b[39m1\u001b[39;49m])[\u001b[39m0\u001b[39m]\n\u001b[1;32m    702\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mIndexError\u001b[39;00m:\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 12\u001b[0m\n\u001b[1;32m      8\u001b[0m ifs_tco1279_orca025 \u001b[39m=\u001b[39m reader\u001b[39m.\u001b[39mregrid(ifs_tco1279_orca025)\n\u001b[1;32m      9\u001b[0m diag\u001b[39m.\u001b[39maverage_into_netcdf(ifs_tco1279_orca025, coord\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlon\u001b[39m\u001b[39m'\u001b[39m, trop_lat\u001b[39m=\u001b[39m\u001b[39m90\u001b[39m,\n\u001b[1;32m     10\u001b[0m                  path_to_netcdf\u001b[39m=\u001b[39mpath_to_mean,  name_of_file\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mifs_tco1279_orca025_3hourly_2D_1h_native_r010_3h\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m diag\u001b[39m.\u001b[39;49maverage_into_netcdf(ifs_tco1279_orca025, coord\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mlat\u001b[39;49m\u001b[39m'\u001b[39;49m, trop_lat\u001b[39m=\u001b[39;49m\u001b[39m15\u001b[39;49m,\n\u001b[1;32m     13\u001b[0m                  path_to_netcdf\u001b[39m=\u001b[39;49mpath_to_mean,  name_of_file\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mifs_tco1279_orca025_3hourly_2D_1h_native_r010_3h\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m/work/bb1153/b382267/AQUA/diagnostics/tropical_rainfall/notebooks/../../tropical_rainfall/tropical_rainfall_class.py:1340\u001b[0m, in \u001b[0;36mTropical_Rainfall.average_into_netcdf\u001b[0;34m(self, data, glob, preprocess, model_variable, coord, trop_lat, get_mean, get_median, s_time, f_time, s_year, f_year, s_month, f_month, new_unit, name_of_file, seasons, path_to_netcdf)\u001b[0m\n\u001b[1;32m   1337\u001b[0m     average_dataset \u001b[39m=\u001b[39m data_average\n\u001b[1;32m   1339\u001b[0m \u001b[39mif\u001b[39;00m path_to_netcdf \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m name_of_file \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1340\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset_to_netcdf(\n\u001b[1;32m   1341\u001b[0m         average_dataset, path_to_netcdf\u001b[39m=\u001b[39;49mpath_to_netcdf, name_of_file\u001b[39m=\u001b[39;49mname_of_file\u001b[39m+\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m_\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m+\u001b[39;49m\u001b[39mstr\u001b[39;49m(coord))\n\u001b[1;32m   1342\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mDataset or DataArray is saved into storage.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   1343\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[0;32m/work/bb1153/b382267/AQUA/diagnostics/tropical_rainfall/notebooks/../../tropical_rainfall/tropical_rainfall_class.py:704\u001b[0m, in \u001b[0;36mTropical_Rainfall.dataset_to_netcdf\u001b[0;34m(self, dataset, path_to_netcdf, name_of_file)\u001b[0m\n\u001b[1;32m    700\u001b[0m     name_of_file \u001b[39m=\u001b[39m name_of_file \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m, re\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m, time_band)[\u001b[39m0\u001b[39m])[\n\u001b[1;32m    701\u001b[0m         \u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m, re\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m, time_band)[\u001b[39m1\u001b[39m])[\u001b[39m0\u001b[39m]\n\u001b[1;32m    702\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mIndexError\u001b[39;00m:\n\u001b[1;32m    703\u001b[0m     name_of_file \u001b[39m=\u001b[39m name_of_file \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \\\n\u001b[0;32m--> 704\u001b[0m         re\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m\"\u001b[39;49m, re\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m:\u001b[39;49m\u001b[39m\"\u001b[39;49m, time_band)[\u001b[39m0\u001b[39;49m])[\u001b[39m1\u001b[39;49m]\n\u001b[1;32m    706\u001b[0m path_to_netcdf \u001b[39m=\u001b[39m path_to_netcdf \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrop_rainfall_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m name_of_file \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_histogram.nc\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    708\u001b[0m dataset\u001b[39m.\u001b[39mto_netcdf(path\u001b[39m=\u001b[39mpath_to_netcdf)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "reader              = Reader(model=\"IFS\", exp=\"tco1279-orca025-cycle3\", source=\"2D_1h_native\", regrid=\"r010\")\n",
+    "ifs_tco1279_orca025_retrived = reader.retrieve()\n",
+    "\n",
+    "for year in range(2020, 2026):\n",
+    "    for x in range(1, 12):\n",
+    "        ifs_tco1279_orca025 = ifs_tco1279_orca025_retrived.sel(time=str(year)+'-'+str(x))\n",
+    "        ifs_tco1279_orca025 = reader.timmean(ifs_tco1279_orca025, freq=\"3H\")\n",
+    "        ifs_tco1279_orca025 = reader.regrid(ifs_tco1279_orca025)\n",
+    "        diag.trop_lat = 90\n",
+    "        diag.average_into_netcdf(ifs_tco1279_orca025, coord='lon', trop_lat=90,\n",
+    "                         path_to_netcdf=path_to_mean,  name_of_file='ifs_tco1279_orca025_3hourly_2D_1h_native_r010_3h_lon')\n",
+    "        diag.trop_lat = 15\n",
+    "        diag.average_into_netcdf(ifs_tco1279_orca025, coord='lat', trop_lat=15,\n",
+    "                         path_to_netcdf=path_to_mean,  name_of_file='ifs_tco1279_orca025_3hourly_2D_1h_native_r010_3h_lat')"
    ]
   },
   {
