usage on notebook updated

--- a/notebooks/reader/datasets.ipynb
+++ b/notebooks/reader/datasets.ipynb
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "inspect_catalogue(cat)"
+    "inspect_catalogue()"
    ]
   },
   {
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "inspect_catalogue(cat, model = 'CERES')"
+    "inspect_catalogue(model = 'CERES')"
    ]
   },
   {
@@ -273,7 +273,7 @@
     }
    ],
    "source": [
-    "inspect_catalogue(cat, model = 'CERES', exp = 'ebaf-toa41')"
+    "inspect_catalogue(model = 'CERES', exp = 'ebaf-toa41')"
    ]
   },
   {
