in-memory buffering

--- a/notebooks/reader/datasets_lumi.ipynb
+++ b/notebooks/reader/datasets_lumi.ipynb
@@ -14100,7 +14100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In case you wish not to change your script to accomodate for an iterator, it is possible (paying the proce of increased disk access) to buffer the result into a temporary directory. The user needs to specify the location of a directory in which such temporary directories will be created. Please keep in mind that these are huge datasets, so this operation may require time and disk space. The directories are temporary directories which should be erased automatically if the process is closed regularly. This is not always the case working in a notebook, so please do some houskeeping yourself."
+    "In case you wish not to change your script to accomodate for an iterator, it is possible (paying the price of increased disk access and space) to buffer the result into a temporary directory. The user needs to specify the location of a directory in which such temporary directories will be created. The directories are temporary directories which should be erased automatically if the process is closed regularly. This is not always the case working in a notebook, so please do some houskeeping yourself."
    ]
   },
   {
@@ -14849,6 +14849,25 @@
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is now also possible to ask for buffering but not to specify a directory with `buffer=True` (instead of passing a string with the path). In this case the data from the iterator are collected directly in memory in an xarray.DataSet. This should be done only if the data actually fit (maybe because at the same time timemean and regrid operations have been asked for).\n",
+    "Notice how in this example we ask for `regrid=True` and `timmean=True` directly in the retrieve operation, so that these are done immediately **before** the buffering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aqua import Reader, catalogue\n",
+    "reader = Reader(model=\"IFS\", exp=\"fdb-tco399\", source=\"fdb-long\", aggregation=\"D\", regrid=\"r100\", freq=\"daily\", buffer=True)\n",
+    "data = reader.retrieve(startdate='20200201', enddate='20200229', var='2t', regrid=True, timmean=True)"
    ]
   },
   {
