cleaning of the notebook

--- a/diagnostics/teleconnections/notebooks/NAO_control.ipynb
+++ b/diagnostics/teleconnections/notebooks/NAO_control.ipynb
@@ -7,26 +7,7 @@
    "source": [
     "# NAO control run notebook\n",
     "\n",
-    "This notebook contains access of the control run LRA with the `Teleconnection` class and evaluation of the NAO teleconnection.\n",
-    "\n",
-    "## Content\n",
-    "\n",
-    "1. [The load of packages, modules, and data](#the-load-of-packages-modules-and-data)\n",
-    "2. [The Run method](#the-run-method)\n",
-    "3. [Index evaluation](#index-evaluation)\n",
-    "4. [Regression evaluation](#regression-evaluation)\n",
-    "5. [Correlation evaluation](#correlation-evaluation)\n",
-    "6. [Comparison with NCAR data](#comparison-with-ncar-data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reload_ext autoreload\n",
-    "%autoreload 2"
+    "This notebook contains access of the control run LRA with the `Teleconnection` class and evaluation of the NAO teleconnection."
    ]
   },
   {
