The names of the functions are updated.

--- a/diagnostics/radiation/notebooks/bar_plot.ipynb
+++ b/diagnostics/radiation/notebooks/bar_plot.ipynb
@@ -18,8 +18,8 @@
    "source": [
     "import sys\n",
     "sys.path.insert(0,'../../')\n",
-    "from radiation import new_process_ceres_data, new_process_model_data\n",
-    "from radiation import new_barplot_model_data"
+    "from radiation import process_ceres_data, process_model_data\n",
+    "from radiation import barplot_model_data"
    ]
   },
   {
@@ -40,10 +40,10 @@
    },
    "outputs": [],
    "source": [
-    "ifs_4km = new_process_model_data(model =  'IFS' , exp = 'tco2559-ng5-cycle3' , source = 'lra-r100-monthly')\n",
-    "ifs_9km = new_process_model_data(model =  'IFS' , exp = 'tco1279-orca025-cycle3' , source = 'lra-r100-monthly')\n",
-    "icon = new_process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')\n",
-    "ceres = new_process_ceres_data(exp = \"ebaf-toa41\", source = \"monthly\")"
+    "ifs_4km = process_model_data(model =  'IFS' , exp = 'tco2559-ng5-cycle3' , source = 'lra-r100-monthly')\n",
+    "ifs_9km = process_model_data(model =  'IFS' , exp = 'tco1279-orca025-cycle3' , source = 'lra-r100-monthly')\n",
+    "icon = process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')\n",
+    "ceres = process_ceres_data(exp = \"ebaf-toa41\", source = \"monthly\")"
    ]
   },
   {
@@ -58,7 +58,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-09 20:59:35 :: create_folder :: WARNING  -> Folder test already exists\n"
+      "2023-10-11 16:43:43 :: create_folder :: WARNING  -> Folder test already exists\n"
      ]
     },
     {
@@ -75,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-09 20:59:40 :: create_folder :: WARNING  -> Folder test already exists\n"
+      "2023-10-11 16:43:53 :: create_folder :: WARNING  -> Folder test already exists\n"
      ]
     },
     {
@@ -90,7 +90,7 @@
    "source": [
     "datasets = [ceres['clim_gm'], icon['gm'], ifs_4km['gm'], ifs_9km['gm']]\n",
     "model_names = ['ceres', 'icon', 'ifs 4.4 km', 'ifs 9 km']\n",
-    "new_barplot_model_data(datasets, model_names, outputdir='test', outputfig='test')"
+    "barplot_model_data(datasets, model_names, outputdir='test', outputfig='test')"
    ]
   },
   {
